<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF"
    tools:context="${packageName}.${activityClass}">

    <!--<LinearLayout
        android:id="@+id/simplify_ll_header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/simplify_height_row"
        android:background="@color/simplify_grey_dark"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/simplify_padding_half"
            android:layout_weight="1"
            android:text="@string/simplify_charge_a_card"
            android:textColor="@android:color/white"
            android:textSize="@dimen/simplify_text_large"/>

        <Button
            android:id="@+id/simplify_btn_close"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:paddingLeft="@dimen/simplify_padding_half"
            android:paddingRight="@dimen/simplify_padding_half"
            android:text="@string/simplify_close"
            android:textAllCaps="true"
            android:textColor="@android:color/white"/>

    </LinearLayout>-->

    <LinearLayout
        android:id="@+id/simplify_cc"
        android:paddingTop="16dp"
        android:paddingRight="16dp"
        android:paddingLeft="16dp"
        android:orientation="vertical"
        android:layout_marginBottom="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Número do Cartão de Crédito"
            android:textColor="#9e0b0f"
            android:textSize="12sp"
            android:textStyle="bold"
            android:clickable="false"/>

        <!-- CARD NUMBER -->
        <com.simplify.android.sdk.view.CardNumberEditText
            android:id="@+id/simplify_et_cardnumber"
            android:layout_width="match_parent"
            android:layout_height="@dimen/simplify_height_row"
            android:drawableRight="@drawable/simplify_cardtype_unknown"
            android:drawablePadding="@dimen/simplify_padding_half"
            android:gravity="center_vertical"
            android:hint="@string/simplify_card_number_hint"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:paddingLeft="0dp"
            android:paddingRight="@dimen/simplify_padding_half"
            android:textColor="@color/simplify_grey"
            android:textColorHint="@color/simplify_grey_light"
            android:textSize="@dimen/simplify_text_large" />

        <View
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#1A000000" />
    </LinearLayout>

    <LinearLayout
        android:paddingRight="16dp"
        android:paddingLeft="16dp"
        android:id="@+id/simplify_ll_expcvc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/simplify_cc"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <!-- EXP -->
        <LinearLayout
            android:id="@+id/simplify_exp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_marginRight="4dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@android:color/white">

            <TextView
                android:id="@+id/simplify_tv_exp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/simplify_exp"
                android:textColor="#9e0b0f"
                android:textSize="12sp"
                android:textStyle="bold"
                android:clickable="false"/>

            <com.simplify.android.sdk.view.CardExpirationEditText
                android:id="@+id/simplify_et_cardexpiration"
                android:layout_width="match_parent"
                android:layout_height="@dimen/simplify_height_row"
                android:background="@android:color/transparent"
                android:hint="@string/simplify_exp_hint"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:textColor="@color/simplify_grey"
                android:textColorHint="@color/simplify_grey_light"
                android:textSize="@dimen/simplify_text_large"/>

            <View
                android:layout_alignParentBottom="true"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#1A000000" />
        </LinearLayout>

        <!-- CVC -->
        <LinearLayout
            android:id="@+id/simplify_cvc"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_marginLeft="4dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@android:color/white">

            <TextView
                android:id="@+id/simplify_tv_cvc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/simplify_cvc"
                android:textColor="#9e0b0f"
                android:textSize="12sp"
                android:textStyle="bold"
                android:clickable="false"/>

            <com.simplify.android.sdk.view.CardCvcEditText
                android:id="@+id/simplify_et_cardcvc"
                android:layout_width="match_parent"
                android:layout_height="@dimen/simplify_height_row"
                android:background="@android:color/transparent"
                android:hint="@string/simplify_cvc_hint"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:textColor="@color/simplify_grey"
                android:textColorHint="@color/simplify_grey_light"
                android:textSize="@dimen/simplify_text_large"/>

            <View
                android:layout_alignParentBottom="true"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#1A000000" />

        </LinearLayout>

    </LinearLayout>

    <!-- Success Overlay -->
    <LinearLayout
        android:id="@+id/simplify_ll_successoverlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/simplify_tv_success"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/simplify_success"
            android:textSize="@dimen/simplify_text_xlarge"
            android:textStyle="bold"
            android:textColor="@color/simplify_orange"/>

        <TextView
            android:id="@+id/simplify_tv_successmessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/simplify_padding_double"
            android:layout_marginRight="@dimen/simplify_padding_double"
            android:gravity="center"
            android:textColor="@color/simplify_grey_dark"/>

    </LinearLayout>

    <!-- Error Overlay -->
    <LinearLayout
        android:id="@+id/simplify_ll_erroroverlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/simplify_tv_failure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/simplify_failure"
            android:textSize="@dimen/simplify_text_xlarge"
            android:textStyle="bold"
            android:textColor="@color/simplify_orange"/>

        <TextView
            android:id="@+id/simplify_tv_failuremessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/simplify_padding_double"
            android:layout_marginRight="@dimen/simplify_padding_double"
            android:gravity="center"
            android:textColor="@color/simplify_grey_dark"/>

    </LinearLayout>

    <!-- Charge Button -->
    <RelativeLayout
        android:id="@+id/view_qrcode"
        android:background="#9E0B0F"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="48dp">

        <Button
            style="?android:attr/borderlessButtonStyle"
            android:id="@+id/simplify_btn_charge"
            android:enabled="false"
            android:text="PAGAR"
            android:textColor="@android:color/white"
            android:layout_width="wrap_content"
            android:minWidth="88dp"
            android:layout_marginRight="8dp"
            android:layout_height="42dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true" />

    </RelativeLayout>

</RelativeLayout>
